--- a/pom.xml
+++ b/pom.xml
@@ -558,5 +558,12 @@
         </dependency>
 
     </dependencies>
+	<distributionManagement>
+    <snapshotRepository>
+      <id>deployment</id>
+      <url>http://54.172.142.51:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    
+  </distributionManagement>
 
 </project>
